# ecfw-zephyr

./: .checkpatch.conf  .gitignore  CMakeLists.txt  CODEOWNERS  CREDITS  Kconfig  Manifest.xml  README.md  adl_thermal_support_readme.txt  app.overlay  build_all_boards.sh  build_doc.sh  debug.conf  enable-i2csmb2.overlay  init.sh  mec1501modular_assy6885.overlay  prj.conf  prj_mec1501_adl.conf  prj_mec1501modular_assy6885.conf  release.conf  safdebug.conf  west.yml
.ci-functions/: boards_platforms.sh  build.sh  check_pins.sh  misc.sh
app/: CMakeLists.txt  app.c
boards/: CMakeLists.txt  Kconfig  board.c  board.h  board_config.h  board_thermal.h  mec1501_adl.conf  mec1501_adl_p.conf  mec1501_adl_p_prodrive.conf  mec1501_mtl_p.conf  mec1501modular_assy6885.conf  mec1501modular_assy6885.overlay  mec1728_mtl_s.conf  mec172x_mtl_s.conf  mec172x_ptl_uh.conf  mec172xlj_mtl_template.conf  mec172xmodular_assy6930.conf  mec172xmodular_assy6930.overlay  npcx4m8f_ptl.conf
doc/: conf.py  ecfw.doxyfile.in  index.rst
docs/: .nojekyll  genindex.html  index.html  objects.inv  search.html  searchindex.js
drivers/: CMakeLists.txt  Kconfig  acpi.h  acpi_mec15xx.c  acpi_mec172x.c  acpi_npcx.c  adc_sensors.c  adc_sensors.h  eeprom.c  eeprom.h  espi_hub.c  espi_hub.h  espioob_mngr.c  espioob_mngr.h  fan.h  fan_mec15xx.c  fan_npcx.c  fujitsu_keymap.c  gpio_ec.h  gpio_mec.c  gpio_mec15xx.c  gpio_npcx.c  gtech_keymap.c  i2c_hub.c  i2c_hub.h  kbs_boot_keyseq.h  kbs_keymap.h  kbs_matrix.c  kbs_matrix.h  led.c  led.h  max6958.c  max6958.h  peci_hub.c  peci_hub.h  port80display.c  ps2kbaux.c  (+9 more)
(+266 files in other folders)
